Alterações, adição de Climate Controle Daikin (Ar condicionado)

--- a/groups.yaml
+++ b/groups.yaml
@@ -125,6 +125,7 @@ familia:
 sensoresdecasa:
   name: Sensores de Casa
   entities:
+    - climate.ar_condicionado_bia
     - input_boolean.porta_rua
     - input_boolean.campainha_rua
     - input_select.hass_theme
