--- a/packages/radio.yaml
+++ b/packages/radio.yaml
@@ -8,18 +8,7 @@ homeassistant:
         
   customize:
  
-    script.radio_play:
-      friendly_name: Tocar na zona selecionada
-      icon: mdi:play
-    script.radio_play_geral:
-      friendly_name: Tocar na casa Toda
-      icon: mdi:play
-    script.radio_pause:
-      friendly_name: Parar na zona Selecionada
-      icon: mdi:stop
-    script.radio_pause_geral:
-      friendly_name: Parar em todas as zonas
-      icon: mdi:stop
+
     sensor.zonacentral:
       icon: mdi:surround-sound
       
@@ -40,189 +29,135 @@ automation:
         entity_id: media_player.zonacentral
         volume_level: '{{states.input_number.volume_radio.state}}'
         
-      
-  
-###############################################################################
-#                                                                             #
-#                           S C R I P T S                                     #
-#                                                                             #
-###############################################################################  
-
-script:
-
-  radio_play:
-    alias: Tocar o rádio na zona seleccionada
-    sequence:
-      - service: media_player.media_stop
-        data_template:
-          entity_id: >
-            {%- if is_state('input_select.zona_onde_toca', 'Zona Central') -%}
-                media_player.zonacentral
-            {%- elif is_state('input_select.zona_onde_toca', 'Sala') -%}
-                media_player.Sala
-            {%- endif -%}
-      - service: media_player.play_media
-        data_template:
-          entity_id: >
-             {%- if is_state('input_select.zona_onde_toca', 'Zona Central') -%}
-                media_player.zonacentral
-             {%- elif is_state('input_select.zona_onde_toca', 'Sala') -%}
-                media_player.Sala
-             {%- endif -%}
-          media_content_id: >
-              {%- if is_state('input_select.estacoes_de_radio', 'Orbital') -%}
-                 http://stream.radio.com.pt/ROLI-ENC-401
-              {%- elif is_state('input_select.estacoes_de_radio', 'Oxigenio') -%}
-                 http://stream.radio.com.pt/ROLI-ENC-498
-              {%- elif is_state('input_select.estacoes_de_radio', 'Meo Sudoeste') -%}   
-                 http://stream.radio.com.pt/ROLI-ENC-495
-              {%- elif is_state('input_select.estacoes_de_radio', 'Mega Hits') -%}  
-                 http://19553.live.streamtheworld.com:80/MEGA_HITS_SC
-              {%- elif is_state('input_select.estacoes_de_radio', 'Cidade FM') -%}  
-                 http://mcrscast.mcr.iol.pt/cidadefm
-              {%- elif is_state('input_select.estacoes_de_radio', 'Comercial') -%}  
-                 http://mcrscast.mcr.iol.pt/comercial.mp3
-              {%- elif is_state('input_select.estacoes_de_radio', 'Nova Era') -%}
-                 http://centova.radios.pt:9478/stream/1/  
-              {%- elif is_state('input_select.estacoes_de_radio', 'Rfm') -%}                 
-                 http://19553.live.streamtheworld.com:3690/RFM_SC    
-              {%- elif is_state('input_select.estacoes_de_radio', 'Renascença') -%}
-                 http://19593.live.streamtheworld.com:80/RADIO_RENASCENCA_SC     
-              {%- elif is_state('input_select.estacoes_de_radio', 'Oceano Pacífico') -%}   
-                 http://19553.live.streamtheworld.com:80/OCEANPACIFIC_SC  
-              {%- elif is_state('input_select.estacoes_de_radio', 'TSF') -%}
-                http://tsfdirecto.tsf.pt/tsfdirecto.mp3 
-              {%- elif is_state('input_select.estacoes_de_radio', 'Antena 1') -%} 
-                http://radiocast.rtp.pt/antena180a.mp3   
-              {%- elif is_state('input_select.estacoes_de_radio', 'Antena 2') -%} 
-                http://radiocast.rtp.pt/antena2jazzin80a.mp3                 
-              {%- elif is_state('input_select.estacoes_de_radio', 'Antena 3') -%} 
-                 http://radiocast.rtp.pt/antena380a.mp3  
-              {%- elif is_state('input_select.estacoes_de_radio', 'M80') -%} 
-                 http://mcrscast.mcr.iol.pt/m80  
-              {%- elif is_state('input_select.estacoes_de_radio', 'Tropical FM') -%} 
-                 http://suaradio1.dyndns.ws:10308/stream  
-              {%- elif is_state('input_select.estacoes_de_radio', 'Musica Anos 80') -%}
-                 http://stm15.conectastm.com:30890/live
-              {%- elif is_state('input_select.estacoes_de_radio', 'Smooth FM') -%}  
-                 http://mcrscast.mcr.iol.pt/smoothfm
-              {%- elif is_state('input_select.estacoes_de_radio', 'Radio Radar') -%}     
-                 http://centova.radios.pt:8497/stream/1/
-              {%- endif -%}
-          media_content_type: 'audio/mp3'
-
-
-  radio_stop:
-    alias: Parar o rádio na zona seleccionada
-    sequence:
-      - service: media_player.media_stop
-        data_template:
-          entity_id: >
-            {%- if is_state('input_select.zona_onde_toca', 'Zona Central') -%}
-                media_player.zonacentral
-            {%- elif is_state('input_select.zona_onde_toca', 'Sala') -%}
-                media_player.Sala
-            {%- endif -%}
-          
-  radio_play_geral:
-    alias: Tocar o rádio em todas as zonas
-    sequence:
-      - service: media_player.play_media
-        data_template:
-          entity_id: media_player.zonacentral
-          media_content_id: >
-              {%- if is_state('input_select.estacoes_de_radio', 'Orbital') -%}
-                 http://stream.radio.com.pt/ROLI-ENC-401
-              {%- elif is_state('input_select.estacoes_de_radio', 'Oxigenio') -%}
-                 http://stream.radio.com.pt/ROLI-ENC-498
-              {%- elif is_state('input_select.estacoes_de_radio', 'Meo Sudoeste') -%}   
-                 http://stream.radio.com.pt/ROLI-ENC-495
-              {%- elif is_state('input_select.estacoes_de_radio', 'Mega Hits') -%}  
-                 http://19553.live.streamtheworld.com:80/MEGA_HITS_SC
-              {%- elif is_state('input_select.estacoes_de_radio', 'Cidade FM') -%}  
-                 http://mcrscast.mcr.iol.pt/cidadefm
-              {%- elif is_state('input_select.estacoes_de_radio', 'Comercial') -%}  
-                 http://mcrscast.mcr.iol.pt/comercial.mp3
-              {%- elif is_state('input_select.estacoes_de_radio', 'Nova Era') -%}
-                 http://centova.radios.pt:9478/stream/1/  
-              {%- elif is_state('input_select.estacoes_de_radio', 'Rfm') -%}                 
-                 http://19553.live.streamtheworld.com:3690/RFM_SC    
-              {%- elif is_state('input_select.estacoes_de_radio', 'Renascença') -%}
-                 http://19593.live.streamtheworld.com:80/RADIO_RENASCENCA_SC     
-              {%- elif is_state('input_select.estacoes_de_radio', 'Oceano Pacífico') -%}   
-                 http://19553.live.streamtheworld.com:80/OCEANPACIFIC_SC  
-              {%- elif is_state('input_select.estacoes_de_radio', 'TSF') -%}
-                http://tsfdirecto.tsf.pt/tsfdirecto.mp3 
-              {%- elif is_state('input_select.estacoes_de_radio', 'Antena 1') -%} 
-                http://radiocast.rtp.pt/antena180a.mp3   
-              {%- elif is_state('input_select.estacoes_de_radio', 'Antena 2') -%} 
-                http://radiocast.rtp.pt/antena2jazzin80a.mp3                 
-              {%- elif is_state('input_select.estacoes_de_radio', 'Antena 3') -%} 
-                 http://radiocast.rtp.pt/antena380a.mp3  
-              {%- elif is_state('input_select.estacoes_de_radio', 'M80') -%} 
-                 http://mcrscast.mcr.iol.pt/m80  
-              {%- elif is_state('input_select.estacoes_de_radio', 'Tropical FM') -%} 
-                 http://suaradio1.dyndns.ws:10308/stream  
-              {%- elif is_state('input_select.estacoes_de_radio', 'Musica Anos 80') -%}
-                 http://stm15.conectastm.com:30890/live                 
-              {%- endif -%}
-          media_content_type: 'audio/mp3'
-      - service: media_player.play_media
-        data_template:
-          entity_id: media_player.sala
-          media_content_id: >
-              {%- if is_state('input_select.estacoes_de_radio', 'Orbital') -%}
-                 http://stream.radio.com.pt/ROLI-ENC-401
-              {%- elif is_state('input_select.estacoes_de_radio', 'Oxigenio') -%}
-                 http://stream.radio.com.pt/ROLI-ENC-498
-              {%- elif is_state('input_select.estacoes_de_radio', 'Meo Sudoeste') -%}   
-                 http://stream.radio.com.pt/ROLI-ENC-495
-              {%- elif is_state('input_select.estacoes_de_radio', 'Mega Hits') -%}  
-                 http://19553.live.streamtheworld.com:80/MEGA_HITS_SC
-              {%- elif is_state('input_select.estacoes_de_radio', 'Cidade FM') -%}  
-                 http://mcrscast.mcr.iol.pt/cidadefm
-              {%- elif is_state('input_select.estacoes_de_radio', 'Comercial') -%}  
-                 http://mcrscast.mcr.iol.pt/comercial.mp3
-              {%- elif is_state('input_select.estacoes_de_radio', 'Nova Era') -%}
-                 http://centova.radios.pt:9478/stream/1/  
-              {%- elif is_state('input_select.estacoes_de_radio', 'Rfm') -%}                 
-                 http://19553.live.streamtheworld.com:3690/RFM_SC    
-              {%- elif is_state('input_select.estacoes_de_radio', 'Renascença') -%}
-                 http://19593.live.streamtheworld.com:80/RADIO_RENASCENCA_SC     
-              {%- elif is_state('input_select.estacoes_de_radio', 'Oceano Pacífico') -%}   
-                 http://19553.live.streamtheworld.com:80/OCEANPACIFIC_SC  
-              {%- elif is_state('input_select.estacoes_de_radio', 'TSF') -%}
-                http://tsfdirecto.tsf.pt/tsfdirecto.mp3 
-              {%- elif is_state('input_select.estacoes_de_radio', 'Antena 1') -%} 
-                http://radiocast.rtp.pt/antena180a.mp3   
-              {%- elif is_state('input_select.estacoes_de_radio', 'Antena 2') -%} 
-                http://radiocast.rtp.pt/antena2jazzin80a.mp3                 
-              {%- elif is_state('input_select.estacoes_de_radio', 'Antena 3') -%} 
-                 http://radiocast.rtp.pt/antena380a.mp3  
-              {%- elif is_state('input_select.estacoes_de_radio', 'M80') -%} 
-                 http://mcrscast.mcr.iol.pt/m80  
-              {%- elif is_state('input_select.estacoes_de_radio', 'Tropical FM') -%} 
-                 http://suaradio1.dyndns.ws:10308/stream  
-              {%- elif is_state('input_select.estacoes_de_radio', 'Musica Anos 80') -%}
-                 http://stm15.conectastm.com:30890/live                 
-              {%- endif -%}
-          media_content_type: 'audio/mp3'
-         
-        
-  radio_stop_geral:
-    alias: Parar o rádio em todas as zonas
-    sequence:
+  - alias: Parar
+    trigger:
+      platform: state
+      entity_id: input_select.estacoes_de_radio
+      to: "Parar"
+    action:
       - service: media_player.media_stop
         data:
           entity_id: media_player.zonacentral
+     
+        
+
+  - alias: Orbital
+    trigger:
+      platform: state
+      entity_id: input_select.estacoes_de_radio
+      to: "Orbital"
+    action:
+      - service: media_player.play_media
+        data:
+          entity_id: media_player.zonacentral
+          media_content_id: http://stream.radio.com.pt/ROLI-ENC-401
+          media_content_type: 'audio/mp3'
+          
+  - alias: Oxigenio
+    trigger:
+      platform: state
+      entity_id: input_select.estacoes_de_radio
+      to: "Oxigenio"
+    action:
+      - service: media_player.play_media
+        data:
+          entity_id: media_player.zonacentral
+          media_content_id: http://stream.radio.com.pt/ROLI-ENC-498
+          media_content_type: 'audio/mp3'     
+
+  - alias: Meo Sudoeste
+    trigger:
+      platform: state
+      entity_id: input_select.estacoes_de_radio
+      to: "Meo Sudoeste"
+    action:
       - service: media_player.media_stop
         data:
-          entity_id: media_player.Sala
+          entity_id: media_player.zonacentral
+      - service: media_player.play_media
+        data:
+          entity_id: media_player.zonacentral
+          media_content_id: http://stream.radio.com.pt/ROLI-ENC-495
+          media_content_type: 'audio/mp3' 
+
+  - alias: Mega Hits
+    trigger:
+      platform: state
+      entity_id: input_select.estacoes_de_radio
+      to: "Mega Hits"
+    action:
+      - service: media_player.media_stop
+        data:
+          entity_id: media_player.zonacentral
+      - service: media_player.play_media
+        data:
+          entity_id: media_player.zonacentral
+          media_content_id: http://19553.live.streamtheworld.com:80/MEGA_HITS_SC
+          media_content_type: 'audio/mp3'          
+ 
+  - alias: Cidade FM
+    trigger:
+      platform: state
+      entity_id: input_select.estacoes_de_radio
+      to: "Cidade FM"
+    action:
+      - service: media_player.media_stop
+        data:
+          entity_id: media_player.zonacentral
+      - service: media_player.play_media
+        data:
+          entity_id: media_player.zonacentral
+          media_content_id: http://mcrscast.mcr.iol.pt/cidadefm
+          media_content_type: 'audio/mp3'   
           
-          
+  - alias: Comercial
+    trigger:
+      platform: state
+      entity_id: input_select.estacoes_de_radio
+      to: "Comercial"
+    action:
+      - service: media_player.media_stop
+        data:
+          entity_id: media_player.zonacentral
+      - service: media_player.play_media
+        data:
+          entity_id: media_player.zonacentral
+          media_content_id:  http://mcrscast.mcr.iol.pt/comercial.mp3
+          media_content_type: 'audio/mp3'  
 
 
+           
         
+             
+#              {%- elif is_state('input_select.estacoes_de_radio', 'Nova Era') -%}        
+#                  http://centova.radios.pt:9478/stream/1/  
+ #              {%- elif is_state('input_select.estacoes_de_radio', 'Rfm') -%}                 
+#                  http://19553.live.streamtheworld.com:3690/RFM_SC    
+#               {%- elif is_state('input_select.estacoes_de_radio', 'Renascença') -%}
+#                  http://19593.live.streamtheworld.com:80/RADIO_RENASCENCA_SC     
+#               {%- elif is_state('input_select.estacoes_de_radio', 'Oceano Pacífico') -%}   
+#                  http://19553.live.streamtheworld.com:80/OCEANPACIFIC_SC  
+#               {%- elif is_state('input_select.estacoes_de_radio', 'TSF') -%}
+#                 http://tsfdirecto.tsf.pt/tsfdirecto.mp3 
+#               {%- elif is_state('input_select.estacoes_de_radio', 'Antena 1') -%} 
+#                 http://radiocast.rtp.pt/antena180a.mp3   
+ #              {%- elif is_state('input_select.estacoes_de_radio', 'Antena 2') -%} 
+#                 http://radiocast.rtp.pt/antena2jazzin80a.mp3                 
+#               {%- elif is_state('input_select.estacoes_de_radio', 'Antena 3') -%} 
+#                  http://radiocast.rtp.pt/antena380a.mp3  
+ #              {%- elif is_state('input_select.estacoes_de_radio', 'M80') -%} 
+ #                 http://mcrscast.mcr.iol.pt/m80  
+ #              {%- elif is_state('input_select.estacoes_de_radio', 'Tropical FM') -%} 
+ #                 http://suaradio1.dyndns.ws:10308/stream  
+ #              {%- elif is_state('input_select.estacoes_de_radio', 'Musica Anos 80') -%}
+ #                 http://stm15.conectastm.com:30890/live
+ #              {%- elif is_state('input_select.estacoes_de_radio', 'Smooth FM') -%}  
+ #                 http://mcrscast.mcr.iol.pt/smoothfm
+  #             {%- elif is_state('input_select.estacoes_de_radio', 'Radio Radar') -%}     
+  #                http://centova.radios.pt:8497/stream/1/
+   #            {%- endif -%}
+          
+
 
 ###############################################################################
 #                                                                             #
@@ -272,8 +207,11 @@ input_number:
 input_select:
   
   estacoes_de_radio:
-    name: 'Seleciona a estacao de Radio:'
+    name: 'Seleciona a estacao de Radio'
+    initial: Nenhuma
     options:
+      - Parar
+      - Nenhuma
       - Orbital
       - Oxigenio
       - Mega Hits
@@ -295,12 +233,7 @@ input_select:
       - Smooth FM
       - Radio Radar
       
-  zona_onde_toca:
-    name: 'Seleciona a zona onde toca:'
-    options:
-      - Zona Central
-      - Sala
-    icon: mdi:speaker-wireless
+
 
 
 
@@ -318,18 +251,10 @@ group:
     entities:
       - sensor.zonacentral
       - input_select.estacoes_de_radio
-      - input_select.zona_onde_toca
       - input_number.volume_radio
-      - script.radio_play
-      - script.radio_stop
-      - script.radio_play_geral
-      - script.radio_stop_geral
+     
       
       
      
 
-      
 
-
-
-  
