--- a/configuration.yaml
+++ b/configuration.yaml
@@ -72,7 +72,7 @@ telegram_bot:
     
 android_ip_webcam:
   - name: 'Porta Escada'
-    host: 192.168.1.76
+    host: 192.168.1.89
 
 
 
@@ -103,7 +103,7 @@ discovery:
 sun:
 conversation:
 logger:
-  default: debug
+  default: error
 
 recorder:
 history:
