--- a/configuration.yaml
+++ b/configuration.yaml
@@ -54,7 +54,7 @@ input_boolean: !include input_booleans.yaml
 zone: !include zones.yaml
 camera: !include cameras.yaml
 input_select: !include input_select.yaml
-automation: !include automation.yaml
+#automation: !include automation.yaml
 proximity: !include_dir_merge_named proximity
 history_graph: !include history_graph.yaml
 
@@ -62,13 +62,13 @@ history_graph: !include history_graph.yaml
 
 
 
-telegram_bot:
-  platform: polling
-  api_key: !secret api_key_telegram
-  allowed_chat_ids:
-    - !secret chatid01
-    - !secret chatid02
-    - !secret chatid03
+#telegram_bot:
+#  platform: polling
+#  api_key: !secret api_key_telegram
+#  allowed_chat_ids:
+#    - !secret chatid01
+#    - !secret chatid02
+#    - !secret chatid03
     
 android_ip_webcam:
   - name: 'Porta Escada'
@@ -80,7 +80,7 @@ android_ip_webcam:
 media_player:
   - platform: mediaroom
     host: 192.168.1.64
-    name: "vodafone STB"
+    name: "Box Sala"
 #    optimistic: True
     
     
@@ -96,6 +96,9 @@ media_player:
     username: root
     password: root
     turn_off_action: hibernate
+    
+  - platform: panasonic_viera
+    host: 192.168.1.73
   
 
 map:
@@ -103,7 +106,7 @@ discovery:
 sun:
 conversation:
 logger:
-  default: error
+  default: debug
 
 recorder:
 history:
