--- a/proximity/proximityhome.yaml
+++ b/proximity/proximityhome.yaml
@@ -4,8 +4,20 @@ rodolfo_casa:
     - device_tracker.rodolfo
   unit_of_measurement: m
   
+rodolfo_trabalho:
+  zone: notrabalho
+  devices:
+    - device_tracker.rodolfo
+  unit_of_measurement: m
+  
 paula_casa:
   zone: home
+  devices:
+    - device_tracker.paula
+  unit_of_measurement: m
+  
+paula_trabalho:
+  zone: notrabalhop
   devices:
     - device_tracker.paula
   unit_of_measurement: m
